# ray-tracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
samples/Loro/: 12242_Australian_Rainbow_Lorikeet_v1_l3.mtl
samples/bugatti/: bugatti.mtl
samples/helmet/: helmet.mtl
src/: main.cpp  rtweekend.h
src/aabb/: aabb.h
src/accelerator/: bvh.h
src/bvh/: bvh.h
src/camera/: camera.h
src/color/: color.h
src/ext/embree/include/embree4/: rtcore_config.h
src/ext/embree/lib/cmake/embree-4.3.1/: embree-config-version.cmake  embree-config.cmake  embree-targets.cmake  embree_sycl-targets-release.cmake  embree_sycl-targets.cmake
src/ext/raylib-5.0/: CMakeLists.txt
src/hittable/: hitabble.h  hittable_list.h
src/interval/: interval.h
src/material/: material.h
src/mesh/: mesh.h
src/perlin/: perlin.h
src/primitives/: mesh.h  primitive.h  quads.h  sphere.h  triangle.h
src/ray/: ray.h
src/scene/: scene.h
src/sphere/: Sphere.h  sphere.h
src/texture/: texture.h
src/triangle/: triangle.h
src/vec3/: vec3.h
